@startuml
skinparam classAttributeIconSize 0

' --- Interfaces and Abstractions ---

interface GameContext {
    + shotgun: Shotgun
    + damageMultiplier: Int
}

interface Item {
    + name: String
    + applyEffect(context: GameContext, user: Player): ItemEffectResult
}

interface TargetItem {
    + name: String
    + applyEffect(context: GameContext, user: Player, target: Player): ItemEffectResult
}

' --- Presentation & Navigation Layer (UI & Presenter) ---

class GameLauncher {
    + main(args: Array<String>)
}

class MainAppContainer {
    - playerCount: Int
    - playerNames: SnapshotStateList<String>
    - loggedInPlayers: SnapshotStateList<Player>
    - showLeaderboard: Boolean
    - rematchTrigger: Int
    - currentScreen: String
    + MainAppContainer()
}

class Presenter {
    + uiState: UiState
    + startGame()
    + shoot(targetPlayerUi: PlayerUiState)
    + useItem(playerUi: PlayerUiState, item: Item)
    + useItem(playerUi: PlayerUiState, item: TargetItem)
    + selectTarget(targetPlayerUi: PlayerUiState)
    - applyTargetItem(targetPlayerUi: PlayerUiState)
    - handleItemResult(result: UseItemResult, itemName: String)
    - updateStateFromSession()
    - addLog(message: String)
}

' --- Domain Logic Layer (Core engine) ---

class AppLauncher << (C,#FF7700) Console Entry >> {
    + main(args: Array<String>)
    - handleShotResult(result: ShotResult)
    - handleItemResult(result: UseItemResult)
    - handleItemEffect(effect: ItemEffectResult)
}

class GameSession implements GameContext {
    - status: SessionStatus
    - currentPlayerIdx: Int
    + players: List<Player>
    + shotgun: Shotgun
    + damageMultiplier: Int

    + startRound(live: Int?, blank: Int?): RoundStartResult
    + shot(target: Player): ShotResult
    + useItem(player: Player, item: Item): UseItemResult
    + useItem(player: Player, item: TargetItem, target: Player): UseItemResult
    + getCurrentPlayer(): Player?
    + getWinner(): Player?
    + getPlayersCopy(): List<Player>
}

class Shotgun {
    - barrel: MutableList<AmmoType>
    + load(live: Int, blank: Int)
    + fire(): AmmoType
    + peek(): AmmoType?
    + findFirstLive(): Int
    + invertCurrentAmmo()
    + isEmpty(): Boolean
}

class Player {
    + name: String
    - health: Int
    + isCuffed: Boolean
    + isBuffed: Boolean
    + inventory: MutableList<Any>

    + takeDamage(dmg: Int)
    + heal()
    + addItem(item: Any): Boolean
    + removeItem(item: Any): Boolean
}

' --- Data Access Layer (Exposed ORM & SQLite) ---

class StatisticsService {
    + getOrCreateStats(playerName: String): Statistics
    + updateStats(winnerName: String, participants: List<String>)
    + getLeaderboard(): List<Pair<String, Statistics>>
    + getMatchHistory(): List<MatchLog>
    + clearAllData()
}

entity PlayersTable << (O,#FF7700) object >> {
    + name: Column<String> [PK]
    + wins: Column<Int>
    + totalGames: Column<Int>
}

entity MatchHistoryTable << (O,#FF7700) object >> {
    + matchId: Column<UUID> [PK]
    + winnerName: Column<String>
    + timestamp: Column<Long>
}

class Statistics {
    + wins: Int
    + totalGames: Int
    + formattedWinRate: String
    + calculateWinRate(): Double
}

class MatchLog {
    + matchId: UUID
    + winnerName: String
    + timestamp: Long
    + gameNumber: Int
    + participants: List<String>
}

' --- Enumerations ---

enum AmmoType {
    LIVE
    BLANK
}

enum SessionStatus {
    LOADING
    DISTRIBUTION
    PLAYER_TURN
    GAME_OVER
}

' --- Relationships and Dependencies ---

GameLauncher ..> MainAppContainer
MainAppContainer "1" *-- "0..1" GameSession
MainAppContainer "1" *-- "1" StatisticsService
MainAppContainer ..> Presenter

AppLauncher "1" *-- "0..1" GameSession
AppLauncher "1" *-- "1" StatisticsService
GameSession "1" *-- "2..4" Player
GameSession "1" *-- "1" Shotgun
GameSession "1" *-- "1" SessionStatus

Item ..> GameContext
TargetItem ..> GameContext
Player "1" *-- "1" Statistics

' Связи инвентаря игрока со всеми типами предметов
Player "1" o-- "0..8" Item
Player "1" o-- "0..8" TargetItem

Shotgun ..> AmmoType

StatisticsService ..> PlayersTable
StatisticsService ..> MatchHistoryTable
StatisticsService ..> MatchLog
@enduml
